# hello-conan

./: .gitignore  .travis.yml  README.md  build.py  conanfile.py
.travis/: run.sh
src/: CMakeLists.txt
src/hello/: conan.cpp  conan.h
src/test/: CMakeLists.txt  test-hello-conan.cpp
test_package/: conanfile.py  example.cpp
